Project

General

Profile

Actions

Bug #26894

closed

mds: crash when dumping ops in flight

Added by Zheng Yan over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://perf1.perf.lab.eng.bos.redhat.com/pub/bengland/public/ceph/linode/logs/smf-2018-08-08-20-22/mds-fail/mds0/ceph-mds.li903-152.log

ceph version 12.2.7 (3ec878d1e53e1aeb47a9f619c49d9e7c0aa384d5) luminous (stable)
1: (()+0x5b7a11) [0x556ace1fca11]
2: (()+0xf6d0) [0x7f80603d76d0]
3: (MDRequestImpl::_dump_op_descriptor_unlocked(std::ostream&) const+0x3f) [0x556acdfba47f]
4: (TrackedOp::_gen_desc() const+0x180) [0x556ace1a9a70]
5: (TrackedOp::dump(utime_t, ceph::Formatter*) const+0x526) [0x556ace1a14c6]
6: (OpTracker::dump_ops_in_flight(ceph::Formatter*, bool, std::set<std::string, std::less<std::string>, std::allocator<std::string> >)+0x289) [0x556ace1a1919]
7: (MDSRankDispatcher::handle_asok_command(std::string, std::map<std::string, boost::variant<std::string, bool, long, double, std::vector<std::string, std::allocator<std::string> >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > >, std::less<std::string>, std::allocator<std::pair<std::string const, boost::variant<std::string, bool, long, double, std::vector<std::string, std::allocator<std::string> >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > > > > >&, ceph::Formatter*, std::ostream&)+0x13a) [0x556acdf2d77a]
8: (MDSDaemon::asok_command(std::string, std::map<std::string, boost::variant<std::string, bool, long, double, std::vector<std::string, std::allocator<std::string> >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > >, std::less<std::string>, std::allocator<std::pair<std::string const, boost::variant<std::string, bool, long, double, std::vector<std::string, std::allocator<std::string> >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > > > > >&, std::string, std::ostream&)+0xe8) [0x556acdefdf78]
9: (MDSSocketHook::call(std::string, std::map<std::string, boost::variant<std::string, bool, long, double, std::vector<std::string, std::allocator<std::string> >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > >, std::less<std::string>, std::allocator<std::pair<std::string const, boost::variant<std::string, bool, long, double, std::vector<std::string, std::allocator<std::string> >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > > > > >&, std::string, ceph::buffer::list&)+0x25b) [0x556acdf0bdbb]
10: (AdminSocket::do_accept()+0x10e5) [0x556ace221285]
11: (AdminSocket::entry()+0x288) [0x556ace222cd8]
12: (()+0x7e25) [0x7f80603cfe25]
13: (clone()+0x6d) [0x7f805f4afbad]
NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #26981: luminous: mds: crash when dumping ops in flightResolvedZheng YanActions
Copied to CephFS - Backport #26982: mimic: mds: crash when dumping ops in flightResolvedNathan CutlerActions
Actions #1

Updated by Patrick Donnelly over 5 years ago

  • Category set to Correctness/Safety
  • Assignee set to Zheng Yan
  • Priority changed from Normal to Urgent
  • Target version set to v14.0.0
  • Source set to Development
  • Backport set to mimic,luminous
  • Affected Versions v12.2.8 added
  • Component(FS) MDS added
Actions #2

Updated by Zheng Yan over 5 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Zheng Yan over 5 years ago

  • Subject changed from luminous: mds crash when dumping ops in flight to mds crash when dumping ops in flight
Actions #4

Updated by Patrick Donnelly over 5 years ago

  • Subject changed from mds crash when dumping ops in flight to mds: crash when dumping ops in flight
  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #26981: luminous: mds: crash when dumping ops in flight added
Actions #6

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #26982: mimic: mds: crash when dumping ops in flight added
Actions #7

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF